--- a/src/main/resources/templates/bookstore.html
+++ b/src/main/resources/templates/bookstore.html
@@ -3,8 +3,29 @@
 <head>
 <title>Bookstore</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Welcome to the Bookstore!</h1>
+	<table  class="table table-striped" >
+		<tr>
+			<th>Book Title</th>
+			<th>Author</th>
+			<th>ISBN</th>
+			<th>Price</th>
+			<th></th>
+			<th></th>
+		</tr>
+
+		<tr th:each="book : ${books}">
+			<td th:text="${book.title}">TITLE</td>
+			<td th:text="${book.author}">AUTHOR</td>
+			<td th:text="${book.isbn}">ISBN</td>
+			<td th:text="${book.price}">PRICE</td>
+			<td><a th:href="@{/edit/{id}(id=${book.id})}" >Edit</a></td>
+			<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>    
+		</tr>
+	</table>
+	<a href="/add" class="btn btn-success">Add Book</a>    	
 </body>
 </html>
