--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -16,6 +16,9 @@
 		  	<label for="author">Author</label>
 			<input type="text" id="author" th:field="*{author}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
+			<label for="year">Publishing year</label>
+			<input type="text" id="year" th:field="*{year}" />
+			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="isbn">ISBN</label>
 			<input type="text" th:field="*{isbn}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
