--- a/src/main/resources/templates/bookstore.html
+++ b/src/main/resources/templates/bookstore.html
@@ -11,6 +11,7 @@
 		<tr>
 			<th>Book Title</th>
 			<th>Author</th>
+			<th>Publishing year</th>
 			<th>ISBN</th>
 			<th>Price</th>
 			<th></th>
@@ -20,6 +21,7 @@
 		<tr th:each="book : ${books}">
 			<td th:text="${book.title}">TITLE</td>
 			<td th:text="${book.author}">AUTHOR</td>
+			<td th:text="${book.year}">Publishing year</td>
 			<td th:text="${book.isbn}">ISBN</td>
 			<td th:text="${book.price}">PRICE</td>
 			<td><a th:href="@{/edit/{id}(id=${book.id})}" >Edit</a></td>
