--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -19,13 +19,19 @@
 			<label for="year">Publishing year</label>
 			<input type="text" id="year" th:field="*{year}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
+			<label for="category">Category: </label>
+			<select id="category" name="category" th:field="*{category.categoryId}">
+				<option th:each="category : ${categories}" th:value="${category.categoryId}" th:text="${category.name}">
+				</option>
+			</select>
+			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="isbn">ISBN</label>
 			<input type="text" th:field="*{isbn}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
             <label for="price">Price</label>
 			<input type="text" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<input type="submit" value="Save"></input>
+			<input type="submit" value="Save"  class="btn btn-success"></input>
 		</form>
 	</div>
 </body>
