--- a/src/main/resources/templates/bookstore.html
+++ b/src/main/resources/templates/bookstore.html
@@ -23,14 +23,14 @@
 			<td th:text="${book.title}">TITLE</td>
 			<td th:text="${book.author}">AUTHOR</td>
 			<td th:text="${book.year}">Publishing year</td>
-			<td th:text="${book.category.name}">Category</td>
+			<td th:text="${book.category != null ? book.category.name:''}">Category</td>
 			<td th:text="${book.isbn}">ISBN</td>
 			<td th:text="${book.price}">PRICE</td>
 			<td><a th:href="@{/edit/{id}(id=${book.id})}" >Edit</a></td>
 			<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>    
 		</tr>
 	</table>
-	<a href="/add" class="btn btn-success">Add Book</a>
-	<a href="/categorylist" class="btn btn-success">Categorylist</a>    	
+	<a href="/add" class="btn btn-success">Add a book</a>
+	<a href="/categorylist" class="btn btn-success">Categories</a>    	
 </body>
 </html>
