--- a/src/main/resources/templates/bookstore.html
+++ b/src/main/resources/templates/bookstore.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 	<div class="col-md-5">
-		<h1>Welcome to the Bookstore <span sec:authentication="name"></span>!</h1>
+		<h1>Welcome to the Bookstore <strong><span sec:authentication="name"></span></strong>!</h1>
 	</div>
 	<div class="col-md-4" style="padding:20px 0">
 		<form th:action="@{/logout}" method="post">
